--- a/tensorflow/2.0/tensorflow2_advanced.ipynb
+++ b/tensorflow/2.0/tensorflow2_advanced.ipynb
@@ -6,14 +6,14 @@
       "name": "tensorflow2-advanced.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -128,6 +128,36 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Iw-eBKdC88Vq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8b98b7fd-d975-417c-985d-94f1c763910c"
+      },
+      "cell_type": "code",
+      "source": [
+        "tf.__version__"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.0.0-alpha0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
     },
     {
       "metadata": {
