--- a/ComputerVision/FaceDetecton/FaceDetector.ipynb
+++ b/ComputerVision/FaceDetecton/FaceDetector.ipynb
@@ -9,26 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: images/.DS_Store: No such file or directory\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!rm images/.DS_Store"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "scrolled": false
    },
@@ -110,18 +91,16 @@
     "# Disable jupyter scrolling bar: Cell -> All Outputs ->  toggle scrolling\n",
     "import os\n",
     "import cv2\n",
-    "# Will use matplotlib for showing the image\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "folder = 'images/'\n",
     "image_names = sorted(os.listdir(folder))\n",
     "\n",
-    "#i = 9\n",
-    "#file = folder + image_names[i]\n",
     "\n",
     "for file in image_names:\n",
     "    image = cv2.imread(folder + file)\n",
     "    #cv2.imshow(\"Original\", image)\n",
+    "    \n",
     "    # convert to grayscale\n",
     "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "    # Carrega o detector de faces\n",
@@ -129,12 +108,14 @@
     "    # Detecta as faces\n",
     "    rects = detector.detectMultiScale(gray, scaleFactor = 1.1, minNeighbors = 10, minSize = (30, 30))\n",
     "    # Loop por todas as faces e desenha um quadrado em torno delas\n",
-    "    for (x, y, w, h) in rects:\n",
+    "    for (x, y, w, h) in rects:                        # Cor   # largura\n",
     "        cv2.rectangle(image, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
     "    # Mostra as faces detectadas\n",
     "    #cv2.imshow(\"Faces\", image)\n",
+    "    \n",
     "    # correct BGR to RGB\n",
     "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
     "    plt.figure(figsize=(12,8))\n",
     "    plt.title('Faces')\n",
     "    plt.imshow(image)\n",
