--- a/ComputerVision/HOG-Detect-Logo/HOG-DetectCarLogos.ipynb
+++ b/ComputerVision/HOG-Detect-Logo/HOG-DetectCarLogos.ipynb
@@ -23,10 +23,12 @@
    },
    "outputs": [],
    "source": [
-    "#!wget \n",
-    "#!wget\n",
+    "#!wget https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/ComputerVision/HOG-Detect-Logo/car_logos.zip?raw=true\n",
+    "#!wget https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/ComputerVision/HOG-Detect-Logo/test_images.zip?raw=true\n",
+    "#mkdir test_images\n",
+    "#mkdir car_logos\n",
     "#!unzip test_images.zip\n",
-    "#!unzip car_logos.zip"
+    "#!unzip car_logos.zip\n"
    ]
   },
   {
