--- a/ComputerVision/HOG-Detect-Logo/HOG-DetectCarLogos.ipynb
+++ b/ComputerVision/HOG-Detect-Logo/HOG-DetectCarLogos.ipynb
@@ -16,19 +16,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   174    0   174    0     0    364      0 --:--:-- --:--:-- --:--:--   363\n",
+      "100   185  100   185    0     0    238      0 --:--:-- --:--:-- --:--:--   238\n",
+      "100 1507k  100 1507k    0     0   758k      0  0:00:01  0:00:01 --:--:-- 2636k\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   176    0   176    0     0    349      0 --:--:-- --:--:-- --:--:--   349\n",
+      "100   187  100   187    0     0    225      0 --:--:-- --:--:-- --:--:--   225\n",
+      "100 1342k  100 1342k    0     0   556k      0  0:00:02  0:00:02 --:--:-- 3074k\n",
+      "Archive:  car_logos.zip\n",
+      "   creating: car_logos/\n",
+      "   creating: car_logos/volkswagen/\n",
+      "  inflating: car_logos/volkswagen/volkswagen_05.png  \n",
+      "  inflating: car_logos/volkswagen/volkswagen_04.png  \n",
+      "  inflating: car_logos/volkswagen/volkswagen_01.png  \n",
+      "  inflating: car_logos/volkswagen/volkswagen_03.png  \n",
+      "  inflating: car_logos/volkswagen/volkswagen_02.png  \n",
+      "   creating: car_logos/ford/\n",
+      "  inflating: car_logos/ford/ford_05.png  \n",
+      "  inflating: car_logos/ford/ford_04.png  \n",
+      "  inflating: car_logos/ford/ford_01.png  \n",
+      "  inflating: car_logos/ford/ford_03.png  \n",
+      "  inflating: car_logos/ford/ford_02.png  \n",
+      "   creating: car_logos/audi/\n",
+      "  inflating: car_logos/audi/audi_04.png  \n",
+      "  inflating: car_logos/audi/audi_05.png  \n",
+      "  inflating: car_logos/audi/audi_01.png  \n",
+      "  inflating: car_logos/audi/audi_02.png  \n",
+      "  inflating: car_logos/audi/audi_03.png  \n",
+      "   creating: car_logos/subaru/\n",
+      "  inflating: car_logos/subaru/subaru_05.png  \n",
+      "  inflating: car_logos/subaru/subaru_04.png  \n",
+      "  inflating: car_logos/subaru/subaru_01.png  \n",
+      "  inflating: car_logos/subaru/subaru_03.png  \n",
+      "  inflating: car_logos/subaru/subaru_02.png  \n",
+      "   creating: car_logos/honda/\n",
+      "  inflating: car_logos/honda/honda_02.png  \n",
+      "  inflating: car_logos/honda/honda_03.png  \n",
+      "  inflating: car_logos/honda/honda_01.png  \n",
+      "  inflating: car_logos/honda/honda_04.png  \n",
+      "  inflating: car_logos/honda/honda_05.png  \n",
+      "Archive:  test_images.zip\n",
+      "   creating: test_images/\n",
+      "  inflating: test_images/test_01.png  \n",
+      "  inflating: test_images/test_03.png  \n",
+      "  inflating: test_images/test_02.png  \n",
+      "  inflating: test_images/test_06.png  \n",
+      "  inflating: test_images/test_07.png  \n",
+      "  inflating: test_images/test_05.png  \n",
+      "  inflating: test_images/test_04.png  \n",
+      "total 0\n",
+      "8648132865 drwxr-xr-x  7 vladimiralencar  staff   224B Apr  8 17:26 \u001b[34m.\u001b[m\u001b[m\n",
+      "8648092041 drwxr-xr-x  9 vladimiralencar  staff   288B Apr  8 17:31 \u001b[34m..\u001b[m\u001b[m\n",
+      "8648132878 drwxr-xr-x  7 vladimiralencar  staff   224B Aug 24  2018 \u001b[34maudi\u001b[m\u001b[m\n",
+      "8648132872 drwxr-xr-x  7 vladimiralencar  staff   224B Aug 24  2018 \u001b[34mford\u001b[m\u001b[m\n",
+      "8648132890 drwxr-xr-x  7 vladimiralencar  staff   224B Aug 24  2018 \u001b[34mhonda\u001b[m\u001b[m\n",
+      "8648132884 drwxr-xr-x  7 vladimiralencar  staff   224B Aug 24  2018 \u001b[34msubaru\u001b[m\u001b[m\n",
+      "8648132866 drwxr-xr-x  7 vladimiralencar  staff   224B Aug 24  2018 \u001b[34mvolkswagen\u001b[m\u001b[m\n",
+      "total 2728\n",
+      "8648132896 drwxr-xr-x  9 vladimiralencar  staff   288B Apr  8 17:28 \u001b[34m.\u001b[m\u001b[m\n",
+      "8648092041 drwxr-xr-x  9 vladimiralencar  staff   288B Apr  8 17:31 \u001b[34m..\u001b[m\u001b[m\n",
+      "8648132897 -rw-r--r--  1 vladimiralencar  staff    37K May 17  2015 test_01.png\n",
+      "8648132899 -rw-r--r--  1 vladimiralencar  staff    62K May 17  2015 test_02.png\n",
+      "8648132898 -rw-r--r--  1 vladimiralencar  staff   276K May 17  2015 test_03.png\n",
+      "8648132903 -rw-r--r--  1 vladimiralencar  staff   189K May 17  2015 test_04.png\n",
+      "8648132902 -rw-r--r--  1 vladimiralencar  staff   272K May 17  2015 test_05.png\n",
+      "8648132900 -rw-r--r--  1 vladimiralencar  staff   452K May 17  2015 test_06.png\n",
+      "8648132901 -rw-r--r--  1 vladimiralencar  staff    54K May 17  2015 test_07.png\n"
+     ]
+    }
+   ],
    "source": [
-    "#!wget https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/ComputerVision/HOG-Detect-Logo/car_logos.zip?raw=true\n",
-    "#!wget https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/ComputerVision/HOG-Detect-Logo/test_images.zip?raw=true\n",
-    "#mkdir test_images\n",
-    "#mkdir car_logos\n",
-    "#!unzip test_images.zip\n",
-    "#!unzip car_logos.zip\n"
+    "!curl -L -o car_logos.zip https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/ComputerVision/HOG-Detect-Logo/car_logos.zip?raw=true\n",
+    "!curl -L -o test_images.zip https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/ComputerVision/HOG-Detect-Logo/test_images.zip?raw=true\n",
+    "!unzip car_logos\n",
+    "!unzip test_images\n",
+    "!ls -ilah car_logos\n",
+    "!ls -ilah test_images\n"
    ]
   },
   {
@@ -40,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
