--- a/ComputerVision/DeepLearning/ConvNet01/Convnet_01.ipynb
+++ b/ComputerVision/DeepLearning/ConvNet01/Convnet_01.ipynb
@@ -33,7 +33,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# ConvNet - Rede Neural Convolucional"
+        "# ConvNet - Rede Neural Convolucional - Classificação de Imagens - Cifar10"
       ]
     },
     {
@@ -128,7 +128,7 @@
         "kargs = {\"dropout\": dropout > 0, \"activation\": activation}\n",
         "\n",
         "# Treina o modelo usando SGD\n",
-        "print(\"Compilando o modelo...\")\n",
+        "print(\"Compilando o modelo...\")      # número de cores - 3, 32x32 largura e altura, 10 classes\n",
         "model = ConvNetFactory.build(network, 3, 32, 32, 10, **kargs)\n",
         "sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
         "model.compile(loss=\"categorical_crossentropy\", optimizer=sgd, metrics=[\"accuracy\"])\n",
