--- a/ComputerVision/DeepLearning/MiniVGGNet_04.ipynb
+++ b/ComputerVision/DeepLearning/MiniVGGNet_04.ipynb
@@ -52,21 +52,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 598
         },
-        "outputId": "88ff78b3-6cc7-4725-d54d-01ab8dea89f5"
+        "outputId": "dbcf9a60-4508-427e-d06b-75c82e519d6c"
       },
       "cell_type": "code",
       "source": [
         "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/ComputerVision/DeepLearning/convnet.py\n",
-        "!wget "
+        "!curl -L -o modelo_minivggnet.hdf5 https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/ComputerVision/DeepLearning/modelo_minivggnet.hdf5?raw=true  \n",
+        "!curl -L -o imagens.zip https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/ComputerVision/DeepLearning/imagens.zip?raw=true\n",
+        "!unzip imagens.zip \n",
+        "!rm imagens/.DS_Store "
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-04-19 01:54:15--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/ComputerVision/DeepLearning/convnet.py\n",
+            "--2019-04-19 11:22:53--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/ComputerVision/DeepLearning/convnet.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -75,82 +78,19 @@
             "\n",
             "\rconvnet.py            0%[                    ]       0  --.-KB/s               \rconvnet.py          100%[===================>]   6.20K  --.-KB/s    in 0s      \n",
             "\n",
-            "2019-04-19 01:54:15 (146 MB/s) - ‘convnet.py’ saved [6344/6344]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "EBn9nkVsqrLw",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        },
-        "outputId": "9e288b23-1cce-439f-eff6-cd3194a41939"
-      },
-      "cell_type": "code",
-      "source": [
-        "!curl -L -o modelo_minivggnet.hdf5 https://github.com/vladimiralencar/DeepLearning-LANA/blob/master/ComputerVision/DeepLearning/modelo_minivggnet.hdf5?raw=true"
-      ],
-      "execution_count": 86,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
+            "2019-04-19 11:22:53 (118 MB/s) - ‘convnet.py’ saved [6344/6344]\n",
+            "\n",
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100   180    0   180    0     0    869      0 --:--:-- --:--:-- --:--:--   865\n",
-            "100   191  100   191    0     0    571      0 --:--:-- --:--:-- --:--:--   571\n",
-            "100 16.6M  100 16.6M    0     0  22.5M      0 --:--:-- --:--:-- --:--:-- 22.5M\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "GU029zWmfdIC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "!rm  images.zip"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "XTLGo2r1dBbY",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 289
-        },
-        "outputId": "042fcd20-b8ee-43d1-894f-36d63a7960c8"
-      },
-      "cell_type": "code",
-      "source": [
-        "!curl -L -o imagens.zip https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/ComputerVision/DeepLearning/imagens.zip?raw=true\n",
-        "!unzip imagens.zip \n",
-        "!rm imagens/.DS_Store "
-      ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
+            "100   180    0   180    0     0    886      0 --:--:-- --:--:-- --:--:--   882\n",
+            "100   191  100   191    0     0    600      0 --:--:-- --:--:-- --:--:--   600\n",
+            "100 16.6M  100 16.6M    0     0  19.2M      0 --:--:-- --:--:-- --:--:-- 19.2M\n",
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100   180  100   180    0     0    782      0 --:--:-- --:--:-- --:--:--   782\n",
-            "\r100  503k  100  503k    0     0  1389k      0 --:--:-- --:--:-- --:--:-- 1389k\n",
+            "100   180  100   180    0     0    734      0 --:--:-- --:--:-- --:--:--   731\n",
+            "100  503k  100  503k    0     0  1086k      0 --:--:-- --:--:-- --:--:-- 1086k\n",
             "Archive:  imagens.zip\n",
-            "replace imagens/image8.jpg? [y]es, [n]o, [A]ll, [N]one, [r]ename: A\n",
+            "   creating: imagens/\n",
             "  inflating: imagens/image8.jpg      \n",
             "  inflating: imagens/image9.jpg      \n",
             "  inflating: imagens/image10.jpg     \n",
@@ -160,7 +100,8 @@
             "  inflating: imagens/image5.jpg      \n",
             "  inflating: imagens/image1.jpg      \n",
             "  inflating: imagens/image2.jpg      \n",
-            "  inflating: imagens/image3.jpg      \n"
+            "  inflating: imagens/image3.jpg      \n",
+            "rm: cannot remove 'imagens/.DS_Store': No such file or directory\n"
           ],
           "name": "stdout"
         }
@@ -172,33 +113,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 170
         },
-        "outputId": "43fa383f-4f63-4ccc-d767-1f5e6e0812da"
+        "outputId": "d1d7f77a-28ad-4df8-b696-aa6def5927ee"
       },
       "cell_type": "code",
       "source": [
         "!ls -ila "
       ],
-      "execution_count": 74,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "total 35228\n",
-            "23199751 drwxr-xr-x 1 root root     4096 Apr 19 02:50 .\n",
-            " 5373954 drwxr-xr-x 1 root root     4096 Apr 19 01:53 ..\n",
+            "total 17560\n",
+            "23199751 drwxr-xr-x 1 root root     4096 Apr 19 11:22 .\n",
+            "20578306 drwxr-xr-x 1 root root     4096 Apr 19 11:21 ..\n",
             "23199752 drwxr-xr-x 1 root root     4096 Apr  4 20:19 .config\n",
-            " 5637282 -rw-r--r-- 1 root root     6344 Apr 19 01:54 convnet.py\n",
-            " 5637305 drwxr-xr-x 2 root root     4096 Apr 19 02:55 imagens\n",
-            " 5637301 -rw-r--r-- 1 root root   515236 Apr 19 02:54 imagens.zip\n",
-            " 5637302 -rw-r--r-- 1 root root    59261 Apr 19 02:37 imagens.zip.1\n",
-            " 5637303 -rw-r--r-- 1 root root    59261 Apr 19 02:37 imagens.zip.2\n",
-            " 5637304 -rw-r--r-- 1 root root   515236 Apr 19 02:53 images.zip\n",
-            " 5637307 drwxrwxr-x 3 root root     4096 Apr 19 02:47 __MACOSX\n",
-            " 5637299 -rw-r--r-- 1 root root 17430184 Apr 19 02:24 modelo.hdf5\n",
-            " 5637300 -rw-r--r-- 1 root root 17430184 Apr 19 02:33 modeloVGGNet.hdf5\n",
-            " 5637285 drwxr-xr-x 2 root root     4096 Apr 19 01:54 __pycache__\n",
+            " 5375138 -rw-r--r-- 1 root root     6344 Apr 19 11:22 convnet.py\n",
+            " 5375142 drwxr-xr-x 2 root root     4096 Apr 19 02:45 imagens\n",
+            " 5375141 -rw-r--r-- 1 root root   515236 Apr 19 11:22 imagens.zip\n",
+            " 5375140 -rw-r--r-- 1 root root 17430184 Apr 19 11:22 modelo_minivggnet.hdf5\n",
             " 9306120 drwxr-xr-x 1 root root     4096 Apr  4 20:20 sample_data\n"
           ],
           "name": "stdout"
@@ -211,15 +146,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 4868
+          "height": 5058
         },
-        "outputId": "789dd9e6-1404-4103-866e-1e3a9724c7b1"
+        "outputId": "332bdbde-f3ca-4135-93e1-6ad066e43678"
       },
       "cell_type": "code",
       "source": [
         "# Testando o Modelo Pré-Treinado\n",
         "\n",
-        "# Execute: python cap09-07-test-convnet.py --model modelo/modelo_minivggnet.hdf5 --test-images imagens\n",
         "\n",
         "# Imports\n",
         "import cv2\n",
@@ -263,24 +197,36 @@
         "    probs = model.predict(kerasImage, batch_size=batch_size)\n",
         "    prediction = probs.argmax(axis=1)[0]\n",
         "\n",
-        "    # Desenha a previsão na imagem de teste \n",
-        "    #cv2.putText(image, gtLabels[prediction], (10, 35), cv2.FONT_HERSHEY_SIMPLEX, 1.0, (0, 255, 0), 3)\n",
-        "    #cv2.imshow(\"Imagem\", image)\n",
-        "    #cv2.waitKey(0)\n",
-        "    \n",
+        "    # Desenha a previsão na imagem de teste\n",
         "    # correct BGR to RGB\n",
         "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
         "    plt.figure(figsize=(12,8))\n",
         "    plt.title(gtLabels[prediction])\n",
-        "    plt.imshow(image)\n"
+        "    plt.imshow(image)"
       ],
-      "execution_count": 87,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
             "\n",
             "Carregando o modelo (arquitetura e pesos)...\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Colocations handled automatically by placer.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.cast instead.\n",
             "\n",
             "Testando o modelo em novas imagens\n",
             "Classificando image2.jpg\n",
